@@ -44,6 +44,9 @@ Bugfix
      buffer.
    * Fix invalid buffer sizes passed to zlib during record compression and
      decompression.
+   * Added the macro MBEDTLS_X509_MAX_FILE_PATH_LEN that enables the user to
+     configure the maximum length of a file path that can be buffered when
+     calling mbedtls_x509_crt_parse_path().
 
 Changes
    * Improve testing in configurations that omit certain hashes or
